syntax = "proto3";
package pb;

enum ExchangeType {
  /// 上海期货交易所
  SHFE = 0;
  /// 郑州商品交易所
  CZCE = 1;
  /// 大连商品期货交易所
  DCE = 2;
  /// 中金所
  CFFEX = 3;
  /// 上海证券交易所
  SSE = 4;
  /// 深圳证券交易所
  SZE = 5;
  /// 香港证券交易所
  HKG = 6;
  /// 香港期货交易所
  HKFE = 7;
  /// 各类指数
  INDEX = 8;
  /// 上证期权
  OPTION_SSE = 9;
  /// NEW YORK MERCANTILE EXCHANGE
  NYME = 10;
  /// CME GLOBEX
  GLBX = 11;
  /// cbot
  CBOT = 12;
  /// cme
  CME = 13;
  /// comex
  COMEX = 14;
  /// eurex
  EUREX = 15;
  ///
  IPE = 16;
  /// liffe
  LIFFE = 17;
  /// LME
  LME = 18;
  /// SGX
  SGX = 19;
  // demo ex
  DEMO = 20;
  // INE
  INE = 21;
  /// 未知
  INVALIDEX = 22;
}

enum ProductType {
  // 未知
  PT_UNKOWN = 0;
  // 期货
  PT_FUTURE = 1;
  // 股票
  PT_STOCK = 2;
  // 债券
  PT_BOND = 3;
  // 组合
  PT_COMBINATION = 4;
  // 期权
  PT_OPTION = 5;
  // 期货期权
  PT_FUTURE_OPTION = 6;
  // 股票期权
  PT_STOCK_OPTION = 7;
  // 上证50ETF期权
  PT_SSE_ETF_OPTION = 8;
}

enum PeriodType {
  // Tick
  TICK = 0;
  // 分钟
  M1 = 1;
  // 3分钟
  M3 = 2;
  // 5分钟
  M5 = 3;
  // 10分钟
  M10 = 4;
  // 15分钟
  M15 = 5;
  // 小时
  H1 = 6;
  // 3小时
  H3 = 7;
  // 日线
  D1 = 8;
  // 周线
  W1 = 9;
  // 月线
  MON1 = 10;
}

// 合约代码
message Symbol {
  ExchangeType exchange = 1;
  string code = 2;
}

// 品种
message ProductID {
  ExchangeType exchange = 1;
  string code = 2;
}

// K线
message Kline {
  // 时间
  int64 time = 1;
  // 开盘
  double open = 2;
  // 最高
  double high = 3;
  // 最低
  double low = 4;
  // 收盘
  double close = 5;
  // 成交量
  double volume = 6;
  // 成交额
  double amount = 7;
  // 持仓量
  double position = 8;
}

// KlineSeries K线序列
message KlineSeries {
  Symbol symbol = 1;
  PeriodType period = 2;
  repeated Kline list = 3;
}

// 经纪商通道
message BrokerRoute {
  string id = 1;
  int32 type = 2;
  string name = 3;
  repeated string md_front_list = 4;
  repeated string trade_front_list = 5;
}

message BrokerRouteList { repeated BrokerRoute list = 1; }

// 合约行情信息
message InstrumentInfo {
  /// 合约名称.
  string symbol_name = 1;
  /// 是否单边大保
  int32 position_rank = 2;
  /// 更新时间.
  int64 update_time = 3;
  // 交易日
  int32 update_trading_day = 4;
  /// 涨停价.
  double upper_limit_price = 5;
  /// 跌停价.
  double lower_limit_price = 6;
  // 昨收
  double pre_close_price = 7;
  // 昨结
  double pre_settlement_price = 8;
  // 昨成交
  int32 pre_volume = 9;
  // 昨持仓
  int32 pre_position = 10;
  // 今天结算价
  double settlement_price = 11;
  // 创建日期
  int32 create_date = 12;
  // 上市日期
  int32 open_date = 13;
  // 到期日期
  int32 expire_date = 14;
  // 开始交割日期
  int32 start_deliver_date = 15;
  // 结束交割日期
  int32 end_deliver_date = 16;
  // 是否T+0
  int32 is_close_today_allowed = 17;
  // 市价最大下单量
  int32 max_market_order_volume = 18;
  // 市价最小下单量
  int32 min_market_order_volume = 19;
  // 限价最大下单量
  int32 max_limit_order_volume = 20;
  // 限价最小下单量
  int32 min_limit_order_volume = 21;
  // 基础合约
  Symbol base_symbol = 22;
  // 行权价
  double strike_price = 23;
}

message SimpleTimePeriod {
  int32 start = 1;
  int32 end = 2;
}

message MarketTimeRule {
  repeated SimpleTimePeriod send_rule = 1;
  repeated SimpleTimePeriod cancel_rule = 2;
  repeated SimpleTimePeriod matching_rule = 3;
}

// 品种信息.
message ProductInfo {
  // 品种代码.
  ProductID product_id = 1;
  // 子类型
  ProductID product_group_id = 2;
  // 类型
  ProductType type = 3;
  /// 品种名称
  string product_name = 4;
  // 最小变动价位.
  double price_tick = 5;
  // 合约乘数
  int32 volume_multiple = 6;
  // 昨总成交
  int32 pre_volume = 7;
  // 昨持仓
  int32 pre_position = 8;
  // 币种
  int32 currency_type = 9;
  // 结算组
  int32 settlement_group = 10;
  // 时间
  MarketTimeRule time_rule = 11;
}

// 交易合约
message TradingInstrument {
  /// 合约编码
  Symbol symbol = 1;
  // 合约信息
  InstrumentInfo instrument_info = 2;
  // 品种信息
  ProductInfo product_info = 3;
}

message TradingInstrumentList { repeated TradingInstrument list = 1; }

message ProductInfoList { repeated ProductInfo list = 1; }

message ReqSetTradingInstrumentList {
  string op_code = 1;
  int32 exchange = 2;
  repeated TradingInstrument list = 3;
}

message ReqSetProductInfoList {
  string op_code = 1;
  int32 exchange = 2;
  repeated ProductInfo list = 3;
}

message ReqUpdateTIOpenDate {
  Symbol symbol = 1;
  int32 open_date = 2;
}

message ReqUpdateTIOpenDateList {
  int32 exchange = 1;
  repeated ReqUpdateTIOpenDate list = 2;
  string op_code = 3;
}

enum AccountType {
  CN_FUTURE = 0;
  CN_STOCK = 1;
}

enum CurrencyType {
  CNY = 0;
  USD = 1;
}

// 结算账户资金信息
message AccountMoneySummary {
  // 账号
  string id = 1;
  // 结算组（可能单个结算组给个摘要)
  AccountType type = 2;
  // 币种
  CurrencyType currency_type = 3;
  /// 余额
  double balance = 4;
  /// 手续费
  double commission = 5;
  /// 占用保证金
  double cur_margin = 6;
  /// 持仓市值.
  double net_position_amount = 7;
  /// 上次余额
  double pre_balance = 8;
  /// 利息收入
  double interest_in = 9;
  /// 存款
  double deposit = 10;
  /// 取款
  double withdraw = 11;
  /// 冻结保证金
  double frozen_margin = 12;
  /// 冻结手续费
  double frozen_commission = 13;
  /// 可用资金
  double available = 14;
  /// 平仓盈亏
  double close_profit = 15;
  /// 持仓盈亏
  double position_profit = 16;
  // 上次质押金额
  double pre_mortgate = 17;
  // 上次信用额度
  double pre_credit = 18;
  // 利息基数
  double interest_base = 19;
  // 可取资金
  double withdraw_available = 20;
  // 基本准备金
  double reserve = 21;
  // 交易日
  int32 trading_day = 22;
  // 信用额度
  double credit = 23;
  // 质押金额
  double mortgate = 24;
  // 交易所保证金
  double exchange_margin = 25;
  // 交割保证金
  double delivery_margin = 26;
  // 交易所交割保证金
  double exchange_delivery_margin = 27;
  // 保底期货结算准备金
  double reserve_balance = 28;
  // 交割手续费
  double delivery_commission = 29;
  // 冻结过户费
  double frozen_transfer_fee = 30;
  // 冻结的印花税
  double frozen_stamp_tax = 31;
  // 过户费
  double transfer_fee = 32;
  // 印花税
  double stamp_tax = 33;
  /// 盯市盈亏
  double mtm_profit = 34;
  ///授信额度
  double pre_mtm_profit = 35;
  ///证券总价值
  double stock_value = 36;
  ///国债回购占用资金
  double bond_repurchase_amount = 37;
  ///国债逆回购占用资金
  double reverse_repurchase_amount = 38;
  ///融资买入金额
  double margin_trade_amount = 39;
  ///融券卖出金额
  double short_sell_amount = 40;
  ///融资持仓盈亏
  double margin_trade_profit = 41;
  ///融券持仓盈亏
  double short_sell_profit = 42;
  // 冻结平仓所需要费用
  double frozen_close_commission = 43;
  // 劣后
  double common_balance = 44;
  // 优先资金
  double prefered_balance = 45;
  // 兑换基础货币汇率
  double base_exchange_rate = 46;
  // 报警
  double warning_level = 47;
  // 强平
  double force_close_level = 48;
  // 进入清算的平仓盈亏
  double cleared_closed_profit = 49;
  // 名称
  string name = 50;
  // 利息
  double interest = 51;
  // 冻结利息
  double frozen_interest = 52;
}

message AccountMoneySummaryList { repeated AccountMoneySummary list = 1; }

// 出入金操作
message MoneyTransferRecord {
  // ID
  int64 uid = 1;
  // 出入
  int32 direction = 2;
  // 币种
  int32 currency_type = 3;
  // 结算组
  int32 settlement_group = 4;
  // 是否确认
  int32 confirmed = 5;
  // 优先
  int32 is_prefered = 6;
  // 金额
  double amount = 7;
  // 账户
  string account_id = 8;
  // 操作员
  string operator_id = 9;
  // 会话编号
  int32 session_id = 10;
  // 请求时间
  int64 time = 11;
  // 备注
  string comment = 12;
  // 第三方单号
  string bank_trade_id = 13;
  // 配置编号，用于出金
  int64 payment_config_id = 14;
  // 原始金额
  double original_amount = 15;
  // 费用
  double fee = 16;
  // 通道
  string payment_path = 17;
  // 身份证号
  string identity_number = 18;
  // 电话
  string phone_number = 19;
  // 银行名称
  string bank_name = 20;
  // 支行名称
  string bank_branch_name = 21;
  // 银行卡号
  string bank_card_no = 22;
  // 省份
  string province = 23;
  // 城市
  string city = 24;
  // 支付方式代码
  string pay_type = 25;
  // 支付时间
  int64 payed_time = 26;
  // 确认时间
  int64 confirmed_time = 27;
  // 名称
  string name = 28;
}

message MTRList { repeated MoneyTransferRecord list = 1; }

message UserSession {
  int64 id = 1;
}